# personal-site

./: .babelrc  .eslintrc.js  .eslintrc.json  .gitignore  .gitmodules  .pre-commit-config.yaml  DEVLOPMENT.md  Jenkinsfile  README.md  babel.config.js  build.sh  next.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: update_website_on_aws.yml
components/: Box.jsx  FixedSection.jsx  FixedSection.module.css  NavHeader.jsx  NavHeader.module.css  Text.jsx  globals.css  hooks.jsx  utils.module.sass
components/Text/: SurroundingText.tsx  Text.tsx
components/about/: About.module.sass  About.tsx  MessageHandler.tsx
components/animation/: Animation.tsx  LineAnimator.tsx  TextAnimation.tsx
deploy/: deploy
infra/: .gitignore  .terraform.lock.hcl  README.md  TERRAFORM_DOCS.md  certificate.tf  locals.tf  main.tf  outputs.tf  plan.json
infrastructure/: README.md  main.tf  variables.tf
legacy/: WavePlanet.tsx
pages/: _app.js  about.jsx  anime.jsx  cv.jsx  home.jsx  index.jsx  newHome.jsx  playground.jsx  rss.jsx
personal-website/: .editorconfig  README.md  middleware.ts  next.config.js  package-lock.json  package.json  postcss.config.js  prettier.config.js  tailwind.config.js  tsconfig.json
src/: build.sh  next.config.js  package-lock.json  package.json  start.sh  tailwind.config.js
styles/: Home.module.scss  globals.css
v3/: .eslintrc.json  Dockerfile  README.md  docker-publish.sh  middleware.ts  package-lock.json  package.json  prettier.config.js  terraform.tfstate  tsconfig.json
v3/scripts/translate/: pyproject.toml  translate.py
(+894 files in other folders)
