[tool.poetry]
name = "translate"
version = "0.1.0"
description = ""
authors = ["Weilue Luo <luoweilue@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.7"
python-dotenv = "^1.0.0"
deep-translator = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "translate:main"
langs = "translate:langs"
